<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.github.gogiffy.activities.FullImageViewActivity">

    <ImageView
        android:src="@drawable/giphy"
        android:adjustViewBounds="true"
        android:id="@+id/imgFullScreenImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_marginTop="-40dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/imgFullScreenImage"
        android:alpha="51"
        android:text="Yoooooooonioioiiooioiasdoaofuaiaskdkafhajfadkaslja;lf;asflk"
        android:layout_gravity="bottom"
        android:background="#80000000"
        android:orientation="vertical"
        android:id="@+id/tvURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
